tests/resource/valid/class/simple_class.mamba
class MyClass
    def my_function() -> Int => 10

def my_class := MyClass()
print(my_class.my_function())
