tests/resource/invalid/type/function/call_mut_function.mamba
class MyClass
    def a: Int := 20
    def f(self, x: Int) -> Int =>
        x + 20


def my_class := MyClass()
my_class.f(10)
